--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
     implementation "net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT"
 }
 
-def targetJavaVersion = 17
+def targetJavaVersion = 16
 java {
     def javaVersion = JavaVersion.toVersion(targetJavaVersion)
     sourceCompatibility = javaVersion
@@ -34,7 +34,7 @@ java {
 }
 
 tasks.withType(Jar) {
-    destinationDir = file("$rootDir/server/plugins")
+    destinationDir = file("$rootDir/libs")
 }
 
 tasks.withType(JavaCompile).configureEach {
