--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,12 @@ java {
     }
 }
 
+compileJava.options.encoding = 'UTF-8'
+
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
+}
+
 tasks.withType(Jar) {
     destinationDir = file("$rootDir/libs")
 }
